2003-07-28  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* main.c: Make more variables static.

2003-07-23  Pavel Roskin  <proski@gnu.org>

	* key.c (xterm_key_defines): Add more sequences for xterm-179 by
	Thomas E. Dickey.

2003-07-21  Pavel Roskin  <proski@gnu.org>

	* subshell.c (pty_open_master) [HAVE_GRANTPT]: Prefer
	posix_openpt() over GNU-specific getpt().  Needed for FreeBSD
	5.x.  Original patch by Max Khon <fjoe@FreeBSD.org>

	* screen.c (panel_key): Redisplay ministatus if the searching
	was turned off.  Reported by gotar@poczta.onet.pl

2003-07-08  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* ext.c (regex_check_type): Don't skip first character after ":"
	unconditionaly.

2003-07-02  Pavel Roskin  <proski@gnu.org>

	* ext.c (regex_check_type): Set content_shift to skip the
	filename.

2003-06-27  David Sterba  <dave@jikos.cz>

	* hotlist.c: Add buttons "Refresh" and "Free VFSs now" to Active
	VFS dialog.
	(hotlist_button_callback): Handle the buttons.
	* main.c: Remove the 'Free VFS now' menu item.

2003-06-25  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* ext.c (regex_check_type): Fix previous change.

	* ext.c (regex_check_type): Strip tab(s) after "filename:" in
	file output.

2003-06-22  Pavel Roskin  <proski@gnu.org>

	* execute.c (do_execute): Make static.  Print end of line after
	"Press any key to continue" and user's keystroke, but before
	restoring the panels.  Eliminate last_paused variable.  Don't
	print fake prompt if there is no command.

	* text.c: Eliminate.  Move colors to color.c and clr_scr() to
	layout.c.
	* main.c (restore_console): Eliminate, use handle_console().
	* Makefile.am: Remove text.c.

	* execute.c: New file with all functions for execution and
	toggling panels not specific to subshell.
	* execute.h: Corresponding header.
	* Makefile.am: Adjust for the above.

	* main.c (execute): Eliminate.  Fix all dependencies.
	(shell_execute): Constify string argument.

2003-06-09  Pavel Roskin  <proski@gnu.org>
