@@ -1,3 +1,9 @@
+2003-08-01  Pavel Roskin  <proski@gnu.org>
+
+	* main.c: Rename PanelMenu to LeftMenu.  Don't assume that
+	LeftMenu and RightMenu are identical.
+	From Pavel Tsekov <ptsekov@gmx.net>
+
 2003-07-28  Andrew V. Samoilov  <sav@bcs.zp.ua>
 
 	* main.c: Make more variables static.
